# pei-nwdaf-ml

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: jenkins.yml
scripts/: test_inference_e2e.py  test_kafka_inference.sh
src/: __init__.py
src/config/: __init__.py  inference_type.py  model_config.py
src/core/: __init__.py  config.py  dependencies.py
src/general/: modelI.py
src/inference/: __init__.py  inference.py
src/interface/: kmw.py  mlint.py
src/mlflow/: main.py  mlf.py
src/models/: __init__.py  ann.py  factory.py  initializer.py  lstm.py  modelI.py  model_interface.py  randomforest.py  xgboost.py
src/models/networks/: __init__.py  ann.py  lstm.py
src/models/trainers/: __init__.py  ann.py  base_torch.py  lstm.py
src/models/utils/: utils_torch.py
src/performance_monitor/: cell_model_manager.py
src/routers/: __init__.py  data.py  inference.py  kafka.py  websocket.py
src/routers/v1/: __init__.py  cell_inference.py  config.py  config_router.py  fields_router.py  (+5 more)
src/schemas/: __init__.py  config.py  data.py  fields.py  inference.py  kafka.py  model.py  model_config.py  model_options.py  training.py
src/services/: cell_inference.py  config.py  config_service.py  data_storage_client.py  inference.py  inference_service.py  mlflow_service.py  model_options_service.py  model_service.py  performance_monitor_service.py  training.py  training_service.py
src/trainer/: trainer.py
src/utils/: features.py
tests/: __init__.py  conftest.py
tests/inference/: test_inference.py
tests/integration/: conftest.py  test_mlflow_service_integration.py
tests/interface/: test_mlinterface.py
tests/models/: test_factory.py  test_integration.py  test_models.py  test_router.py  test_unit.py
tests/performance_monitor/: test_cell_model_manager.py
tests/routers/: test_routers.py  test_v1_routers.py
tests/unit/: test_data_storage_client.py  test_mlflow_service.py  test_schemas.py
