[project]
name = "pei-nwdaf-ml"
version = "1.0.0"
description = "ML inference and model management service for the NWDAF platform"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "PEI Team" }
]

dependencies = [
    "torch==2.9.1+cpu",
    "confluent-kafka==2.12.2",
    "fastapi==0.124.0",
    "numpy==2.3.5",
    "pydantic==2.12.5",
    "scikit-learn==1.7.2",
    "uvicorn==0.38.0",
    "mlflow==3.6.0",
    "mlflow-skinny==3.6.0",
    "mlflow-tracing==3.6.0",
    "httpx==0.28.1",
    "boto3==1.35.0",
    "websockets==14.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# PyTorch CPU-only index for smaller downloads
extra-index-url = ["https://download.pytorch.org/whl/cpu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
