[project]
name = "pei-nwdaf-ml"
version = "0.1.0"
description = "NWDAF ML Service - Model instantiation, training and inference service"
requires-python = ">=3.11"
dependencies = [
    "torch==2.9.1+cpu",
    "fastapi>=0.124.0",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.8.0",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
    "mlflow>=3.6.0",
    "httpx>=0.28.1",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24.0",
    "testcontainers>=4.0.0",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
